--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "pixi-electron",
   "version": "1.0.0",
-  "description": "pixi electron app",
+  "description": "electron app",
   "main": "index.js",
   "scripts": {
     "start": "electron ."
   },
   "author": "alvarotala@gmail.com",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "electron": "^13.1.2"
+  },
+  "dependencies": {
+    "fs": "^0.0.1-security"
   }
 }
