--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "child_process": "^1.0.2",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "rpio": "^2.4.2"
   }
 }
